--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,12 +14,13 @@
         <activity
             android:name=".UserProfile"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
-            <meta-data android:name="android.app.searchable"
+            <meta-data
+                android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
 
             <intent-filter>
@@ -31,8 +32,8 @@
         <activity
             android:name=".DetailActivity"
             android:label="Details"
-            android:theme="@style/AppTheme.Details"></activity>
-
+            android:theme="@style/AppTheme.Details" />
+        <activity android:name=".Demo"></activity>
     </application>
 
 </manifest>
